<resources>
    <string name="app_name">小金箍</string>
    <string name="title_activity_login">login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fistPage">首页</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment1">this is fragment1</string>
    <string name="fragment2">this is fragment2</string>
    <string name="fragment3">this is fragment3</string>


    <string name="login">登录</string>
    <string name="user_name">邮箱</string>
    <string name="password">密码</string>
    <string name="repeatpassword">再次输入密码</string>
    <string name="forgetpsw">忘记密码</string>
    <string name="backtologin">已有账号？登录</string>
    <string name="register">注册</string>
    <string name="userregister">邮箱注册</string>
    <string name="nickname">昵称</string>
    <string name="welcome">欢迎使用小金箍</string>
    <string name="getinfo">了解我们</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="settings">初始化设置</string>
    <string name="setangle">角度设置</string>
    <string name="resetangle">重新设置</string>
    <string name="finishsetangle">完成角度设置</string>
    <string name="beginwork">开始</string>
    <string name="relaxTime">休息总时间：</string>
    <string name="relaxTimes">休息次数：</string>
    <string name="done">完成</string>
    <string name="suspended">暂停</string>
    <string name="continuel">继续</string>
    <string name="hip">已完成本次学习任务，数据已上传至我的空间！</string>
    <string name="showevaData">点此查看</string>
    <string name="search">搜索</string>
    <string name="myconnect">连接</string>
</resources>
