<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<!-- TODO: Update blank fragment layout -->


    <FrameLayout
        android:id="@+id/search_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:gravity="center">
        <Switch
            android:id="@+id/mySwitch"
            android:textOn="@string/open"
            android:textOff="@string/close"
            android:layout_width="48dp"
            android:layout_height="48dp" />
        <Button
            android:id="@+id/mysearch_button"
            android:layout_marginStart="48dp"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:background="@color/blue"
            android:text="@string/search"
            android:gravity="center"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/myconnect_button"
            android:layout_marginStart="48dp"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:background="@color/blue"
            android:text="@string/myconnect"
            android:gravity="center"
            android:textColor="@color/white"
            android:visibility="invisible"/>
        <Spinner
            android:id="@+id/list"
            android:layout_marginStart="128dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
    </FrameLayout>

    <RelativeLayout
        android:layout_below="@id/search_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center" >
        <Button
            android:id="@+id/settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/settings"
            android:gravity="center"
            android:textColor="@color/white"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/setangle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/setangle"
            android:gravity="center"
            android:textColor="@color/white"
            android:visibility="invisible" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/resetangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/resetangle"
                android:textColor="@color/white"
                android:visibility="invisible" />
            <Button
                android:id="@+id/finishsetangle"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/finishsetangle"
                android:textColor="@color/white"
                android:visibility="invisible" />
        </FrameLayout>
        <Button
            android:id="@+id/beginWork"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/beginwork"
            android:gravity="center"
            android:textColor="@color/white"
            android:visibility="invisible" />

        <!--
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/suspended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/suspended"
                android:textColor="@color/white"
                android:visibility="invisible" />
            <Button
                android:id="@+id/continuel"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/continuel"
                android:textColor="@color/white"
                android:visibility="invisible" />
        </FrameLayout>

        -->
    </RelativeLayout>

</RelativeLayout>
