<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true" >

    <FrameLayout
        android:id="@+id/welcome_word"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="start|center_vertical"
            android:text="@string/welcome"
            android:textColor="@color/dark"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/getInfo"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="end|center_vertical"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getinfo"
            android:textColor="@color/blue"/>

    </FrameLayout>


    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_word"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center" >
        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center" >
            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:paddingEnd="60dp"
                android:maxLength="30"
                android:paddingStart="55dp" >
            </EditText>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/email_img"
                android:visibility="visible" />

            <Button
                android:id="@+id/bt_username_clear"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="@drawable/button_clear"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:visibility="invisible"
                />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/usercode_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="15dp"
            android:gravity="center" >
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:paddingEnd="60dp"
                android:maxLength="20"
                android:paddingStart="55dp" >
            </EditText>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginStart="7dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/login_code_in_img" />
        <Button
            android:id="@+id/bt_pwd_eye"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:background="@drawable/button_eye_n"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:visibility="invisible"
            />
        <Button
            android:id="@+id/bt_pwd_clear"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:background="@drawable/button_clear"
            android:visibility="invisible"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="33dp"
            />
    </FrameLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@id/usercode_layout"
        android:layout_marginTop="30dp"
        android:background="#ff336699"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/login" />
    <Button
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/login"
        android:layout_below="@id/login"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:gravity="end|center_vertical"
        android:text="@string/forgetpsw"
        android:textColor="@color/blue"
        android:textSize="16sp" />
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/login"
        android:layout_below="@id/login"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:gravity="start|center_vertical"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="16sp"/>
</RelativeLayout>

    </RelativeLayout>
