<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="com.jayantxie.activity.RegisterActivity">

    <LinearLayout
        android:id="@+id/register_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/register_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_back"
            android:layout_marginStart="7dp"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userregister"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="start|center_vertical"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/register_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/register_top"
        android:gravity="center" >
        <FrameLayout
            android:id="@+id/username_register_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center" >
            <EditText
                android:id="@+id/username_register"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:paddingEnd="60dp"
                android:maxLength="30"
                android:paddingStart="55dp" >
            </EditText>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/email_img"
                android:visibility="visible" />

            <Button
                android:id="@+id/bt_username_clear_register"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="@drawable/button_clear"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:visibility="invisible"
                />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/nickname_register_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@id/username_register_layout"
            android:gravity="center" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/login_user_in_img"
                android:visibility="visible" />

            <Button
                android:id="@+id/bt_nickname_clear_register"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="@drawable/button_clear"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:visibility="invisible"
                />

            <EditText
                android:id="@+id/nickname_register"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:hint="@string/nickname"
                android:inputType="text"
                android:paddingEnd="60dp"
                android:maxLength="20"
                android:paddingStart="55dp" >
            </EditText>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/usercode_register_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nickname_register_layout"
            android:layout_marginTop="15dp"
            android:gravity="center" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="7dp"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/login_code_in_img" />
            <Button
                android:id="@+id/bt_pwd_eye_register"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:background="@drawable/button_eye_n"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:visibility="invisible"
                />
            <Button
                android:id="@+id/bt_pwd_clear_register"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="@drawable/button_clear"
                android:visibility="invisible"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="33dp"
                />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:paddingEnd="60dp"
                android:maxLength="20"
                android:paddingStart="55dp" >
            </EditText>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/usercode_register_layout_repeat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usercode_register_layout"
            android:layout_marginTop="15dp"
            android:gravity="center" >
            <EditText
                android:id="@+id/password_register_repeat"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/repeatpassword"
                android:paddingEnd="60dp"
                android:maxLength="20"
                android:paddingStart="55dp" >
            </EditText>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="7dp"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/login_code_in_img"
                />
            <Button
                android:id="@+id/bt_pwd_clear_register_repeat"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:background="@drawable/button_clear"
                android:visibility="invisible"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="33dp"
                />
            <Button
                android:id="@+id/bt_pwd_eye_register_repeat"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:background="@drawable/button_eye_n"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:visibility="invisible"
                />

        </FrameLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_below="@id/usercode_register_layout_repeat"
            android:layout_marginTop="30dp"
            android:background="#ff336699"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/register" />
        <Button
            android:id="@+id/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/register_button"
            android:layout_below="@id/register_button"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:gravity="start|center_vertical"
            android:text="@string/backtologin"
            android:textColor="@color/blue"
            android:textSize="14sp"/>
    </RelativeLayout>


</RelativeLayout>
